--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,13 +4,14 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/"/>
         <dependent-module archiveName="qwanda-utils-0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="qwanda-0.5.3.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda/qwanda">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="java-output-path" value="/wildfly-qwanda-service/target/classes"/>
         <property name="context-root" value="wildfly-qwanda-service"/>
+        <property name="java-output-path" value="/wildfly-qwanda-service/target/classes"/>
     </wb-module>
 </project-modules>
