--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -8,7 +8,7 @@
         <dependent-module archiveName="qwanda-utils-0.4.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="qwanda-0.5.5.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda/qwanda">
+        <dependent-module archiveName="qwanda-services-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/daoservices/daoservices">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="wildfly-qwanda-service"/>
