--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,9 @@
         <dependent-module archiveName="qwanda-utils-0.8.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="qwanda-0.8.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda/qwanda">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="wildfly-qwanda-service"/>
         <property name="java-output-path" value="/wildfly-qwanda-service/target/classes"/>
     </wb-module>
