--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -9,7 +9,10 @@
         <dependent-module archiveName="qwanda-services-1.0.11.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-services/qwanda-services">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="qwanda-utils-1.0.10.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
+        <dependent-module archiveName="qwanda-utils-1.0.11.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="qwanda-1.0.11.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda/qwanda">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="wildfly-qwanda-service"/>
