--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -7,7 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <dependent-module archiveName="qwanda-services-1.0.14.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-services/qwanda-services">
+        <dependent-module archiveName="qwanda-utils-1.0.15.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/qwanda-utils/qwanda-utils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="wildfly-qwanda-service"/>
